Update web upgraded

--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1416,3 +1416,12 @@ img.gambar{
     float: right;
   }
 
+  .containertes{
+    border: solid 1px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items:center;
+    flex-wrap: wrap;
+  }
+
